--- a/letter/config/styles.css
+++ b/letter/config/styles.css
@@ -5,10 +5,16 @@
   box-sizing: border-box;
   font-family: 'Times New Roman', Times, serif;
 }
-
+table{
+  padding: 0;
+}
 hr{
   margin: 0;
   padding: 0;
+}
+
+p{
+  font-size: 12pt;
 }
 .text-bold{
   font-weight: bold;
@@ -60,4 +66,58 @@ hr{
 }
 .ml-5{
   margin-left: 50pt;
+}
+
+.pl-1{
+  margin-left: 10pt;
+}
+.pl-2{
+  margin-left: 20pt;
+}
+.pl-3{
+  margin-left: 30pt;
+}
+.pl-4{
+  margin-left: 40pt;
+}
+.pl-5{
+  margin-left: 50pt;
+}
+
+.mt-1{
+  margin-top: 10pt;
+}
+.mt-2{
+  margin-top: 20pt;
+}
+.mt-3{
+  margin-top: 30pt;
+}
+.mt-4{
+  margin-top: 40pt;
+}
+.mt-5{
+  margin-top: 50pt;
+}
+
+.bold-underlined{
+  font-weight: bold;
+  text-decoration: underline;
+}
+
+.line-height-15{
+  line-height: 15pt;
+}
+.line-height-10{
+  line-height: 10pt;
+}
+
+.d-flex{
+  display: flex;
+  justify-content: flex-end;
+  text-align: right;
+}
+
+.justify-content-end{
+  /* justify-content: end; */
 }
